.metadata/.plugins/org.eclipse.cdt.ui/lab1.build.log
14:24:39 **** Incremental Build of configuration Debug for project lab1 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F746xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'HAL_GPIO_EXTI_Callback':
../Core/Src/main.c:67:35: error: 'Ext_LED_Pin' undeclared (first use in this function); did you mean 'EXT_LED1_Pin'?
   67 |         HAL_GPIO_TogglePin(GPIOC, Ext_LED_Pin);
      |                                   ^~~~~~~~~~~
      |                                   EXT_LED1_Pin
../Core/Src/main.c:67:35: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:106:9: warning: unused variable 'prev_State' [-Wunused-variable]
  106 |   _Bool prev_State = 0;
      |         ^~~~~~~~~~
../Core/Src/main.c:105:31: warning: variable 'LD3_State' set but not used [-Wunused-but-set-variable]
  105 |   _Bool LD1_State, LD2_State, LD3_State;
      |                               ^~~~~~~~~
../Core/Src/main.c:105:20: warning: variable 'LD2_State' set but not used [-Wunused-but-set-variable]
  105 |   _Bool LD1_State, LD2_State, LD3_State;
      |                    ^~~~~~~~~
../Core/Src/main.c:105:9: warning: variable 'LD1_State' set but not used [-Wunused-but-set-variable]
  105 |   _Bool LD1_State, LD2_State, LD3_State;
      |         ^~~~~~~~~
make: *** [Core/Src/subdir.mk:46: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

14:24:39 Build Failed. 2 errors, 4 warnings. (took 485ms)

